--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -29,6 +29,39 @@
     "arr = np.array(list)\n",
     "print(\"One-dimensional NumPy Array:\", arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Write a NumPy program to create a 3x3 matrix with values ranging from 2 to 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: \n",
+      "[[2, 3, 4], [5, 6, 7], [8, 9, 10]]\n",
+      "2D Array 3*3 is:  [[ 2  3  4]\n",
+      " [ 5  6  7]\n",
+      " [ 8  9 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "l1 = [[2,3,4],[5,6,7],[8,9,10]]\n",
+    "print(\"Original array: \")\n",
+    "print(l1)\n",
+    "arr1 = np.array(l1)\n",
+    "print(\"2D Array 3*3 is: \", arr1)"
+   ]
   }
  ],
  "metadata": {
