[Ranjithgc] Add: create a null vector of size 10 and update sixth value to 11

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -62,6 +62,37 @@
     "arr1 = np.array(l1)\n",
     "print(\"2D Array 3*3 is: \", arr1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Write a NumPy program to create a null vector of size 10 and update sixth value to 11."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "Updated sixth value is:\n",
+      "[ 0.  0.  0.  0.  0.  0. 11.  0.  0.  0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr2 = np.zeros(10)\n",
+    "print(arr2)\n",
+    "print(\"Updated sixth value is:\")\n",
+    "arr2[6] = 11 \n",
+    "print(arr2)"
+   ]
   }
  ],
  "metadata": {
