--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -93,6 +93,44 @@
     "arr2[6] = 11 \n",
     "print(arr2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Write a NumPy program to reverse an array (first element becomes last)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array\n",
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "Reversed Array\n",
+      "[19 18 17 16 15 14 13 12 11 10  9  8  7  6  5  4  3  2  1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr3 = np.arange(1,20)\n",
+    "print(\"Original Array\")\n",
+    "print(arr3)\n",
+    "print(\"Reversed Array\")\n",
+    "arr3 = arr3[::-1]\n",
+    "print(arr3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
