[Ranjithgc] Add: add a border(filled with 0s) around an existing array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -172,6 +172,45 @@
     "arr4[1:-1, 1:-1] = 0\n",
     "print(arr4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Write a NumPy program to add a border (filled with 0's) around an existing array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "0 on the border and 1 inside in the array\n",
+      "[[0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr5 = np.ones((3,3))\n",
+    "print(\"Original array:\")\n",
+    "print(arr5)\n",
+    "print(\"0 on the border and 1 inside in the array\")\n",
+    "arr5 = np.pad(arr5, pad_width=1, mode='constant', constant_values=0)\n",
+    "print(arr5)"
+   ]
   }
  ],
  "metadata": {
