--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Write a Python program to convert a list of numeric value into a one-dimensional\n",
+    "   Write a Python program to convert a list of numeric value into a one-dimensional\n",
     "   NumPy array."
    ]
   },
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Write a NumPy program to create a 3x3 matrix with values ranging from 2 to 10."
+    " Write a NumPy program to create a 3x3 matrix with values ranging from 2 to 10."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Write a NumPy program to create a null vector of size 10 and update sixth value to 11."
+    "Write a NumPy program to create a null vector of size 10 and update sixth value to 11."
    ]
   },
   {
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Write a NumPy program to reverse an array (first element becomes last)."
+    "Write a NumPy program to reverse an array (first element becomes last)."
    ]
   },
   {
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Write a NumPy program to create a 2d array with 1 on the border and 0 inside."
+    "Write a NumPy program to create a 2d array with 1 on the border and 0 inside."
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. Write a NumPy program to add a border (filled with 0's) around an existing array"
+    "Write a NumPy program to add a border (filled with 0's) around an existing array"
    ]
   },
   {
@@ -210,6 +210,45 @@
     "print(\"0 on the border and 1 inside in the array\")\n",
     "arr5 = np.pad(arr5, pad_width=1, mode='constant', constant_values=0)\n",
     "print(arr5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to create a 8x8 matrix and fill it with a checkerboard pattern. Go to the editor\n",
+    "Checkerboard pattern:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checkerboard pattern:\n",
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr6 = np.ones((3,3))\n",
+    "print(\"Checkerboard pattern:\")\n",
+    "arr6 = np.zeros((8,8),dtype=int)\n",
+    "arr6[1::2,::2] = 1\n",
+    "arr6[::2,1::2] = 1\n",
+    "print(arr6)"
    ]
   }
  ],
