--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -250,6 +250,42 @@
     "arr6[::2,1::2] = 1\n",
     "print(arr6)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to convert a list and tuple into arrays. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List to array: \n",
+      "[1 2 3 4 5 6 7 8]\n",
+      "Tuple to array: \n",
+      "[[8 4 6]\n",
+      " [1 2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "my_list = [1, 2, 3, 4, 5, 6, 7, 8]\n",
+    "print(\"List to array: \")\n",
+    "arr7 = np.asarray(my_list)\n",
+    "print(arr7)\n",
+    "my_tuple = ([8, 4, 6], [1, 2, 3])\n",
+    "print(\"Tuple to array: \")\n",
+    "arr8 = np.asarray(my_tuple)\n",
+    "print(arr8)"
+   ]
   }
  ],
  "metadata": {
