[Ranjithgc] Add: to append values to end of an array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -286,6 +286,39 @@
     "arr8 = np.asarray(my_tuple)\n",
     "print(arr8)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to append values to the end of an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array: \n",
+      "[1, 2, 3]\n",
+      "After Append Values are\n",
+      "[1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "list = [1, 2, 3]\n",
+    "print(\"Original Array: \")\n",
+    "print(list)\n",
+    "arr9 = np.append(list, [[4,5,6],[7,8,9]])\n",
+    "print(\"After Append Values are\")\n",
+    "print(arr9)"
+   ]
   }
  ],
  "metadata": {
