[Ranjithgc] Add: to find real and imaginary parts of an array of complex numbers

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -319,6 +319,47 @@
     "print(\"After Append Values are\")\n",
     "print(arr9)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to find the real and imaginary parts of an array of complex numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Array a: (1+0j)\n",
+      "Original b: (0.7071067811865476+0.7071067811865476j)\n",
+      "Real Part of Array:\n",
+      "1.0\n",
+      "0.7071067811865476\n",
+      "Imaginary Part of Array:\n",
+      "0.0\n",
+      "0.7071067811865476\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.sqrt(1+0j)\n",
+    "b = np.sqrt(0+1j)\n",
+    "print(\"Original Array a:\", a)\n",
+    "print(\"Original b:\", b)\n",
+    "print(\"Real Part of Array:\")\n",
+    "print(a.real)\n",
+    "print(b.real)\n",
+    "print(\"Imaginary Part of Array:\")\n",
+    "print(a.imag)\n",
+    "print(b.imag)"
+   ]
   }
  ],
  "metadata": {
