[Ranjithgc] Add: to find the number of elements of an array, length of one array element in bytes and total bytes consumed by the elements

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -360,6 +360,36 @@
     "print(a.imag)\n",
     "print(b.imag)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to find the number of elements of an array, length of one array element in bytes and total bytes consumed by the elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of the array:  3\n",
+      "Length of one array element in bytes:  8\n",
+      "Total bytes consumed by the elements of the array:  24\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([1,2,3], dtype=np.float64)\n",
+    "print(\"Size of the array: \", x.size)\n",
+    "print(\"Length of one array element in bytes: \", x.itemsize)\n",
+    "print(\"Total bytes consumed by the elements of the array: \", x.nbytes)"
+   ]
   }
  ],
  "metadata": {
