[Ranjithgc] Add: to find common values between two arrays

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -390,6 +390,37 @@
     "print(\"Length of one array element in bytes: \", x.itemsize)\n",
     "print(\"Total bytes consumed by the elements of the array: \", x.nbytes)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to find common values between two arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array1: [ 0 10 20 30 40 50]\n",
+      "Array2: [10, 30, 50]\n",
+      "Common Values between 2 Arrays are: [10 30 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr1 = np.array([0, 10, 20, 30, 40, 50])\n",
+    "print(\"Array1:\", arr1)\n",
+    "arr2 = [10, 30, 50]\n",
+    "print(\"Array2:\", arr2)\n",
+    "print(\"Common Values between 2 Arrays are:\", np.intersect1d(arr1, arr2))"
+   ]
   }
  ],
  "metadata": {
