--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -421,6 +421,39 @@
     "print(\"Array2:\", arr2)\n",
     "print(\"Common Values between 2 Arrays are:\", np.intersect1d(arr1, arr2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to find the set exclusive-or of two arrays. Set exclusive-or will return the sorted, unique values that are in only one (not both) of the input arrays. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array1:  [ 0 10 20 40 60 80]\n",
+      "Array2:  [10, 30, 40, 50, 70]\n",
+      "Unique values that are in only one (not both) of the input arrays:\n",
+      "[ 0 20 30 50 60 70 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "array1 = np.array([0, 10, 20, 40, 60, 80])\n",
+    "print(\"Array1: \",array1)\n",
+    "array2 = [10, 30, 40, 50, 70]\n",
+    "print(\"Array2: \",array2)\n",
+    "print(\"Unique values that are in only one (not both) of the input arrays:\")\n",
+    "print(np.setxor1d(array1, array2))"
+   ]
   }
  ],
  "metadata": {
