[Ranjithgc] Add: to find the set difference of two arrays

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -454,6 +454,39 @@
     "print(\"Unique values that are in only one (not both) of the input arrays:\")\n",
     "print(np.setxor1d(array1, array2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to find the set difference of two arrays. The set difference will return the sorted, unique values in array1 that are not in array2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array1:  [ 0 10 20 40 60 80]\n",
+      "Array2:  [10, 30, 40, 50, 70]\n",
+      "Unique values in array1 that are not in array2:\n",
+      "[ 0 20 60 80]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "array1 = np.array([0, 10, 20, 40, 60, 80])\n",
+    "print(\"Array1: \",array1)\n",
+    "array2 = [10, 30, 40, 50, 70]\n",
+    "print(\"Array2: \",array2)\n",
+    "print(\"Unique values in array1 that are not in array2:\")\n",
+    "print(np.setdiff1d(array1, array2))"
+   ]
   }
  ],
  "metadata": {
