[Ranjithgc] Add: to compare two arrays

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -487,6 +487,51 @@
     "print(\"Unique values in array1 that are not in array2:\")\n",
     "print(np.setdiff1d(array1, array2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program compare two given arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:  [1 3 7]\n",
+      "Array b:  [4 5 6]\n",
+      "arr1 > arr2\n",
+      "[False False  True]\n",
+      "arr1 >= arr2\n",
+      "[False False  True]\n",
+      "arr1 < arr2\n",
+      "[ True  True False]\n",
+      "arr1 <= arr2\n",
+      "[ True  True False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr1 = np.array([1, 3, 7])\n",
+    "arr2 = np.array([4, 5, 6])\n",
+    "print(\"Array a: \",arr1)\n",
+    "print(\"Array b: \",arr2)\n",
+    "print(\"arr1 > arr2\")\n",
+    "print(np.greater(arr1, arr2))\n",
+    "print(\"arr1 >= arr2\")\n",
+    "print(np.greater_equal(arr1, arr2))\n",
+    "print(\"arr1 < arr2\")\n",
+    "print(np.less(arr1, arr2))\n",
+    "print(\"arr1 <= arr2\")\n",
+    "print(np.less_equal(arr1, arr2))"
+   ]
   }
  ],
  "metadata": {
