[Ranjithgc] Add: to save a NumPy array to a text file

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -532,6 +532,24 @@
     "print(\"arr1 <= arr2\")\n",
     "print(np.less_equal(arr1, arr2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to save a NumPy array to a text file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.arange(1.0, 2.0, 3.0)\n",
+    "np.savetxt('file.out', arr, delimiter=',')"
+   ]
   }
  ],
  "metadata": {
