[Ranjithgc] Add: to create a contigous flattened array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -550,6 +550,40 @@
     "arr = np.arange(1.0, 2.0, 3.0)\n",
     "np.savetxt('file.out', arr, delimiter=',')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to create a contiguous flattened array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "[[10 20 30]\n",
+      " [20 40 50]]\n",
+      "New flattened array:\n",
+      "[10 20 30 20 40 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[10, 20, 30], [20, 40, 50]])\n",
+    "print(\"Original array:\")\n",
+    "print(x)\n",
+    "y = np.ravel(x)\n",
+    "print(\"New flattened array:\")\n",
+    "print(y)"
+   ]
   }
  ],
  "metadata": {
