[Ranjithgc] Add: to change the data type of an array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -584,6 +584,42 @@
     "print(\"New flattened array:\")\n",
     "print(y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to change the data type of an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6]\n",
+      " [ 6  8 10]]\n",
+      "Data type of the array x is: int32\n",
+      "New Type:  float64\n",
+      "[[ 2.  4.  6.]\n",
+      " [ 6.  8. 10.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([[2, 4, 6], [6, 8, 10]], np.int32)\n",
+    "print(arr)\n",
+    "print(\"Data type of the array x is:\", arr.dtype)\n",
+    "# Change the data type of x\n",
+    "arr1 = arr.astype(float)\n",
+    "print(\"New Type: \", arr1.dtype)\n",
+    "print(arr1)"
+   ]
   }
  ],
  "metadata": {
