[Ranjithgc] Add: to create an which looks like below array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -648,6 +648,35 @@
     "arr = np.eye(3)\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to create an array which looks like below array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0.]\n",
+      " [1. 0. 0.]\n",
+      " [1. 1. 0.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.tri(4, 3, -1)\n",
+    "print(arr)"
+   ]
   }
  ],
  "metadata": {
