--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -677,6 +677,35 @@
     "arr = np.tri(4, 3, -1)\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to concatenate two 2-dimensional arrays. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  3  0  2  4]\n",
+      " [ 5  7  9  6  8 10]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr1 = np.array([[0, 1, 3], [5, 7, 9]])\n",
+    "arr2 = np.array([[0, 2, 4], [6, 8, 10]])\n",
+    "arr3 = np.concatenate((arr1, arr2), 1)\n",
+    "print(arr3)"
+   ]
   }
  ],
  "metadata": {
