--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -747,6 +747,44 @@
     "print(\"Try to change the value of the first element:\")\n",
     "arr[0] = 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to create an array of (3, 4) shape, multiply every element value by 3 and display the new array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array elements:\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "New array elements:\n",
+      "[[ 0  3  6  9]\n",
+      " [12 15 18 21]\n",
+      " [24 27 30 33]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.arange(12).reshape(3, 4)\n",
+    "print(\"Original array elements:\")\n",
+    "print(arr)\n",
+    "for i in np.nditer(arr, op_flags=['readwrite']):\n",
+    "    i[...] = 3 * i\n",
+    "print(\"New array elements:\")\n",
+    "print(arr)"
+   ]
   }
  ],
  "metadata": {
