[Ranjithgc] Add: to convert a NumPy array into python list structure

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -785,6 +785,40 @@
     "print(\"New array elements:\")\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to convert a NumPy array into Python list structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array elements:\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "Array to list:\n",
+      "[[0, 1], [2, 3], [4, 5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.arange(6).reshape(3, 2)\n",
+    "print(\"Original array elements:\")\n",
+    "print(arr)\n",
+    "print(\"Array to list:\")\n",
+    "print(arr.tolist())"
+   ]
   }
  ],
  "metadata": {
