--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -819,6 +819,41 @@
     "print(\"Array to list:\")\n",
     "print(arr.tolist())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to display NumPy array elements of floating values with given precision."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array elements:\n",
+      "[0.26153123 0.52760141 0.5718299  0.5927067  0.7831874  0.69746349\n",
+      " 0.35399976 0.99469633 0.0694458  0.54711478]\n",
+      "Print array values with precision 3:\n",
+      "[0.262 0.528 0.572 0.593 0.783 0.697 0.354 0.995 0.069 0.547]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr =np.array([ 0.26153123, 0.52760141, 0.5718299, 0.5927067, 0.7831874, 0.69746349,             \n",
+    "  0.35399976, 0.99469633, 0.0694458, 0.54711478]) \n",
+    "print(\"Original array elements:\")\n",
+    "print(arr)\n",
+    "print(\"Print array values with precision 3:\")\n",
+    "np.set_printoptions(precision=3)\n",
+    "print(arr)"
+   ]
   }
  ],
  "metadata": {
