--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -854,6 +854,39 @@
     "np.set_printoptions(precision=3)\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to suppresses the use of scientific notation for small numbers in NumPy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array elements:\n",
+      "[1.60e-10 1.60e+00 1.20e+03 2.35e-01]\n",
+      "Print array values with precision 3:\n",
+      "[   0.       1.6   1200.       0.235]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "arr =np.array([1.60000000e-10, 1.60000000e+00, 1.20000000e+03, 2.35000000e-01]) \n",
+    "print(\"Original array elements:\")\n",
+    "print(arr)\n",
+    "print(\"Print array values with precision 3:\")\n",
+    "np.set_printoptions(suppress=True)\n",
+    "print(arr)"
+   ]
   }
  ],
  "metadata": {
