[Ranjithgc] Add: to add an an extra column to a NumPy Array

--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -887,6 +887,34 @@
     "np.set_printoptions(suppress=True)\n",
     "print(arr)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to add an extra column to a NumPy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 10  20  30 100]\n",
+      " [ 40  50  60 200]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x = np.array([[10,20,30], [40,50,60]])\n",
+    "y = np.array([[100], [200]])\n",
+    "print(np.append(x, y, axis=1))"
+   ]
   }
  ],
  "metadata": {
