--- a/numpy/numpyProblems.ipynb
+++ b/numpy/numpyProblems.ipynb
@@ -915,6 +915,40 @@
     "y = np.array([[100], [200]])\n",
     "print(np.append(x, y, axis=1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a NumPy program to remove specific elements in a NumPy array. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array:\n",
+      "[ 10  20  30  40  50  60  70  80  90 100]\n",
+      "Delete first, fourth and fifth elements:\n",
+      "[ 20  30  60  70  80  90 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([10, 20, 30, 40, 50, 60, 70, 80, 90, 100])\n",
+    "index = [0, 3, 4]\n",
+    "print(\"Original array:\")\n",
+    "print(arr)\n",
+    "print(\"Delete first, fourth and fifth elements:\")\n",
+    "new_arr = np.delete(arr, index)\n",
+    "print(new_arr)"
+   ]
   }
  ],
  "metadata": {
