[Ranjithgc] Refactor: added try and except block

--- a/numpy/list_array.ipynb
+++ b/numpy/list_array.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
-    "@Author: Ranjith G C\n",
-    "@Date: 2021-07-12\n",
-    "@Last Modified by: Ranjith G C\n",
-    "@Last Modified time: 2021-07-12 \n",
-    "@Title : Program Aim is to convert a list into NumPy Array.\n",
-    "\"\"\""
+    "'''<br>\n",
+    "@Author: Ranjith G C<br>\n",
+    "@Date: 2021-07-12<br>\n",
+    "@Last Modified by: Ranjith G C<br>\n",
+    "@Last Modified time: 2021-07-12 <br>\n",
+    "@Title : Program Aim is to convert a list into NumPy Array.<br>\n",
+    "'''<br>"
    ]
   },
   {
@@ -49,16 +49,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": ""
   },
   "orig_nbformat": 4
  },
