--- a/numpy/2D_matrix.ipynb
+++ b/numpy/2D_matrix.ipynb
@@ -4,22 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"\"\"\n",
-    "@Author: Ranjith G C\n",
-    "@Date: 2021-07-12\n",
-    "@Last Modified by: Ranjith G C\n",
-    "@Last Modified time: 2021-07-12 \n",
-    "@Title : Program Aim is to create a 3*3 Matrix with values ranging from 2 to 10.\n",
-    "\"\"\""
+    "\"\"\"<br>\n",
+    "@Author: Ranjith G C<br>\n",
+    "@Date: 2021-07-12<br>\n",
+    "@Last Modified by: Ranjith G C<br>\n",
+    "@Last Modified time: 2021-07-12 <br>\n",
+    "@Title : Program Aim is to create a 3*3 Matrix with values ranging from 2 to 10.<br>\n",
+    "\"\"\"<br>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original array: \n",
+      "[[2, 3, 4], [5, 6, 7], [8, 9, 10]]\n",
+      "2D Array 3*3 is:  [[ 2  3  4]\n",
+      " [ 5  6  7]\n",
+      " [ 8  9 10]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "from loggers import logger\n",
     "try:\n",
     "    l1 = [[2,3,4],[5,6,7],[8,9,10]]\n",
     "    print(\"Original array: \")\n",
