--- a/pandas/insert_column.ipynb
+++ b/pandas/insert_column.ipynb
@@ -12,7 +12,7 @@
     "<br>\n",
     "***@Last Modified time: 2021-07-12***\n",
     "<br>\n",
-    "***@Title : Program Aim to delete the 'attempts' column from the DataFrame. ***"
+    "***@Title : Program Aim to insert a new column in existing DataFrame. ***"
    ]
   },
   {
@@ -37,18 +37,18 @@
       "i         2      Kevin      no    8.0\n",
       "j         1      Jonas     yes   19.0\n",
       "\n",
-      "Delete the 'attempts' column from the data frame:\n",
-      "        name qualify  score\n",
-      "a  Anastasia     yes   12.5\n",
-      "b       Dima      no    9.0\n",
-      "c  Katherine     yes   16.5\n",
-      "d      James      no    NaN\n",
-      "e      Emily      no    9.0\n",
-      "f    Michael     yes   20.0\n",
-      "g    Matthew     yes   14.5\n",
-      "h      Laura      no    NaN\n",
-      "i      Kevin      no    8.0\n",
-      "j      Jonas     yes   19.0\n"
+      "New DataFrame after inserting the 'color' column\n",
+      "   attempts       name qualify  score   color\n",
+      "a         1  Anastasia     yes   12.5     Red\n",
+      "b         3       Dima      no    9.0    Blue\n",
+      "c         2  Katherine     yes   16.5  Orange\n",
+      "d         3      James      no    NaN     Red\n",
+      "e         2      Emily      no    9.0   White\n",
+      "f         3    Michael     yes   20.0   White\n",
+      "g         1    Matthew     yes   14.5    Blue\n",
+      "h         1      Laura      no    NaN   Green\n",
+      "i         2      Kevin      no    8.0   Green\n",
+      "j         1      Jonas     yes   19.0     Red\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
     "from loggers import logger\n",
     "\n",
     "try:\n",
-    "\n",
+    "    \n",
     "    exam_data  = {'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', 'Laura', 'Kevin', 'Jonas'],\n",
     "        'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
     "        'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
@@ -69,8 +69,9 @@
     "    print(\"Original rows:\")\n",
     "    print(df)\n",
     "\n",
-    "    print(\"\\nDelete the 'attempts' column from the data frame:\")\n",
-    "    df.pop('attempts')\n",
+    "    color = ['Red','Blue','Orange','Red','White','White','Blue','Green','Green','Red']\n",
+    "    df['color'] = color\n",
+    "    print(\"\\nNew DataFrame after inserting the 'color' column\")\n",
     "    print(df)\n",
     "\n",
     "except Exception as e:\n",
